tob/tps/.svn/pristine/d0/d05da8b627f98870d0cff0fb53c383f62a4b5326.svn-base
./allumettes/RapideTest.java:23: error: constructor JeuNonConfiant in class JeuNonConfiant cannot be applied to given types;
		jeu = new JeuNonConfiant();
		      ^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error
